Version 10.3 - xxxx edition. 02 November 2022

* New things added:

Added Poke F-Function
Added Visual Real Tape F-Function
Added DSK disk info menu: to get tracks and sectors of a disk
Added ZRCP command: "close-all-menus"

* Improvements:

Improved Debug Console: better refresh, dynamic width??
Improved Debug CPU: added (hl), (de), (bc)


* Fixes:

Fixed +3 disk (and CPC6128?) (PD765) emulation: TODO: add more details here


* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.2 - Hysteria edition. 26 October 2022

* New things added:

Added configurable icons to the ZX Desktop. These icons can:
-Open windows, for example View Sprites
-Trigger actions, like Reset
-File links, these are linked to tapes or snapshots on your disk drive
-There are other special icons, like Trash Can
These icons opens a whole new world on ZEsarUX, so the ZX Desktop is becoming a Full Desktop environment :)

Added new emulated machines:
-ZX Spectrum 48k+
-Microdigital TK80
-Microdigital TK82
-Microdigital TK82C
-Microdigital TK83
-Microdigital TK85
-Microdigital TK95 Spanish
-Timex Computer 2048
-Timex Computer 2068
-Timex Sinclair 1000
-Timex Sinclair 1500

Added Copy Interfaces emulation:
-Defcon
-Dinamid3
-Hilow Barbanegra
-Interface007
-Microhobby Pokeador Automatico
-Phoenix
-Ramjet
-Spec-Mate
-Transtape

Added Dinamic SD1 emulation
Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
Added ZSF support for Timex TS2068, MK14, Chrome, Prism, Chloe, Sam Coupe
Added path setting where to download files from the speccy and zx81 online browser
Added disk image browsing from storage MMC/IDE menus
Added PZX load support as standard tape
Added TAP to PZX converter
Added TAP to TZX turbo converter (TZX Turbo 4000 bauds, to use with Rodolfo Guerra ROMS)
Added TAP to SCR converter
Added some actions than can be fired from command line and don't start ZEsarUX: