@@ -6,6 +6,7 @@ Added Poke F-Function
 Added Visual Real Tape F-Function
 Added DSK disk info menu: to get tracks and sectors of a disk
 Added ZRCP command: "close-all-menus"
+Added icon/F-key to open any window identified by its name (TODO: now F-keys can have parameters, like window name)
 
 * Improvements:
 
